--- a/code/html/awari.html
+++ b/code/html/awari.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Helena Taís Macedo Lopes</title>
+    <title>María Angélica Ruidíaz Barriosnuevos</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
